--- a/styles.css
+++ b/styles.css
@@ -3,65 +3,150 @@ body {
     width: auto;
     display: flex;
     flex-direction: column;
+    margin: 0;
+    /* Style */
+
+    font-family: sans-serif;
+
 }
 
 .header {
     display: flex;
     flex-direction: column;
+
+    /* Style */
+    background-color: #1f2937;
 }
 
 .hero {
     display: flex;
     justify-content: center;
-    justify-content: space-around;
+    gap: 370px;
+
+    /* Style */
+    font-size: 24px;
+    color: #F9FAF8;
+    
 }
 
 ul {
     list-style-type: none;
     display: flex;
     gap: 20px;
+
+    /* Style */
+    color: #E5E7EB;
 }
 
 .introduction {
     display: flex;
     justify-content: center;
-    justify-content: space-around;
+    gap: 100px;
+    padding: 50px;
+
+    /* Style */
 }
 
 h1 {
     margin: 0;
+
+    /* Style */
+    font-size: 42px;
+    font-weight: bolder;
+    color: #F9FAF8;
 }
 
 
 .begin {
     display: flex;
     flex-direction: column;
+    flex: 1;
+    padding: 50px 0 200px 0;
+
+    /* Style */
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .container {
     display: flex;
     justify-content: space-around;
+
+    /* Style */
 }
 
 h2 {
     text-align: center;
+
+    /* Style */
 }
 
-.middel {
+.middle {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* Style */
+    background-color: #E5E7EB;
+
+}
+
+#middle_text {
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+    width: 800px;
+}
+
+#thor {
+    margin-left: 600px;
 }
 
 .end {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px
+    gap: 200px;
+    margin: 100px;
+    margin-left: 150px;
+    margin-right: 150px; 
+    background-color: #3882F6;
+    
+
+    /* Style */
 }
 
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    /* Style */
+    background-color: #1f2937;
+    color: #E5E7EB;
 }
+
+#HeroText {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button {
+    background-color: #3882F6;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+
+/* .middle_text {
+    display: flex;
+    width: 10px;
+} */
